Fixed OPENAPI to match our endpoints, also removed endpoints that is not working right now from openapi and I need to discuss them
